--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,22 @@
 /*/__pycache__/
 /.vscode/
 /data/
+/*/node_modules
+/*/.pnp
+/*/coverage
+/*/build/
 
 # file
 *.sh
 *main*
 *test*
+.pnp.js
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
